--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "axios": "^0.27.2",
+    "firebase": "^9.8.1",
     "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@types/firebase": "^3.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
